the future, but for right now this isn't 100% planned.
[!] I really appreciate all the feedback and bug reports you guys are
submitting, it really does help. (:
[+] Added Mike Tyson's Punch-Out!! (Thanks for the suggestion Fart)
[+] Added SUPER PUNCH OUT!! (Thanks for the suggestion Fart)
[+] Added Funny Shooter (Thanks for the suggestion)
[-] Removed Vex 4 & Vex 5 due to it being broken. Might re-add it later.
(Thanks for the bug report Gigi)
[-] Removed Short Life 2 due to it being broken. Might re-add it later.
(Thanks for the bug report Johnathon)

09/21/2025:
[+] Added Red Ball 4 (Thanks for the suggestion!)

09/20/2025:
[+] Added Unmonitored Google
[+] Added Getaway Shootout (Thanks for the suggestion!)
[+] Added Levil Devil: NOT a Troll Game (Thanks for the suggestion!)
[+] Added Call of Duty: Black Ops (Thanks for the suggestion!)
[+] Added Whack the Burglars (Thanks for the suggestion!)
[+] Fixed Changelog not working on Microsoft Edge (Thanks for the bug
report Julian G)
[+] Added Pluh RNG (Thanks for the suggestion Julian G) [Sorry I forgot to
add it when I promised you I would, lol]
[+] Fixed Bad Time Simulator (Thanks for the bug report Omega, next
time use the bug report form though)

09/18/2025:
[+] Fixed Tomb of the Mask (Thanks for the bug report Buena)
[+] Fixed Basketball Legends 2020. (Thanks for the bug report Buena)
[-] Removed Basketball Stars 2019. (Might re-add later if people care too
much)

09/17/2025:
[+] Added Pokémon Red, Blue, and Yellow (Thanks for the suggestion!)
[+] Added Basketbros (Thanks for the suggestion Griffin!)
[+] Added Whack Your Ex (Thanks for the suggestion!)
[+] Added Grand Theft Auto Advanced
[+] Fixed 1 on 1 Basketball
[+] Added an update popup to tell you when an update happens

09/16/2025:
[+] Added the survey annoucement. (if you haven't already, please take the
survey, it really does help) This is only temporary and will be removed once
enough responses are collected.

09/13/2025: