@@ -10,6 +10,9 @@ submitting, it really does help. (:
 [+] Added Mike Tyson's Punch-Out!! (Thanks for the suggestion Fart)
 [+] Added SUPER PUNCH OUT!! (Thanks for the suggestion Fart)
 [+] Added Funny Shooter (Thanks for the suggestion)
+[+] Added Call of Duty: World at War (Thanks for the suggestion)
+[+] Added Call of Duty: Modern Warfare 3: Defiance (Thanks for the 
+suggestion)
 [-] Removed Vex 4 & Vex 5 due to it being broken. Might re-add it later.
 (Thanks for the bug report Gigi)
 [-] Removed Short Life 2 due to it being broken. Might re-add it later.
